// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<KtoContainer /> rendering should render empty header correctly 1`] = `
<div
  className="kto-container"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="col-12"
      >
        <div>
          <div>
            <header />
            <KtoForm
              ktoContainer={
                Object {
                  "form": Object {},
                }
              }
              onStoreKto={[MockFunction]}
              onUpdateKto={[MockFunction]}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<KtoContainer /> rendering should render filled out error header correctly 1`] = `
<div
  className="kto-container"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="col-12"
      >
        <div>
          <header>
            <h1>
              Er is al feedback gegeven voor deze melding
            </h1>
            <p>
              Nogmaals bedankt voor uw feedback. We zijn voortdurend bezig onze dienstverlening te verbeteren.
            </p>
          </header>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<KtoContainer /> rendering should render finished header correctly 1`] = `
<div
  className="kto-container"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="col-12"
      >
        <div>
          <div>
            <header>
              <h1>
                Bedankt voor uw feedback!
              </h1>
              <p>
                We zijn voortdurend bezig onze dienstverlening te verbeteren.
              </p>
            </header>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<KtoContainer /> rendering should render no header correctly 1`] = `
<div
  className="kto-container"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="col-12"
      >
        <div>
          <div>
            <h1>
              Nee, ik ben niet tevreden met de behandeling van mijn melding
            </h1>
            <KtoForm
              ktoContainer={
                Object {
                  "form": Object {},
                }
              }
              onStoreKto={[MockFunction]}
              onUpdateKto={[MockFunction]}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<KtoContainer /> rendering should render too late error header correctly 1`] = `
<div
  className="kto-container"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="col-12"
      >
        <div>
          <header>
            <h1>
              Helaas, de mogelijkheid om feedback te geven is verlopen
            </h1>
            <p>
              Na het afhandelend van uw melding heeft u 2 weken de gelegenheid om feedback te geven.
            </p>
          </header>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<KtoContainer /> rendering should render yes header correctly 1`] = `
<div
  className="kto-container"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="col-12"
      >
        <div>
          <div>
            <h1>
              Ja, ik ben tevreden met de behandeling van mijn melding
            </h1>
            <KtoForm
              ktoContainer={
                Object {
                  "form": Object {},
                }
              }
              onStoreKto={[MockFunction]}
              onUpdateKto={[MockFunction]}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
